# JNI_with_FMOD

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sawyer/study_jni_fmod/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  T1.cpp  native-lib.cpp
app/src/main/java/com/sawyer/study_jni_fmod/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/sawyer/study_jni_fmod/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
